Fix breadcrumb horizontal spacing

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -759,7 +759,7 @@ $figure-caption-color:              $medium-gray;
 
 // Breadcrumbs
 $breadcrumb-padding-y:              .3125rem;
-$breadcrumb-padding-x:              0;
+$breadcrumb-padding-x:              .3125rem;
 $breadcrumb-item-padding:           .3rem;
 
 $breadcrumb-margin-bottom:          0;
